--- a/package.json
+++ b/package.json
@@ -8,5 +8,15 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.3",
+    "boom": "^7.3.0",
+    "handlebars": "^4.7.8",
+    "hapi-boom-decorators": "^4.1.2",
+    "mysql2": "^3.6.0",
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1"
+  }
 }
