--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.3",
+    "handlebars": "^4.7.8",
+    "nodemon": "^3.0.1"
+  }
 }
